[tool.poetry]
name = "b4rpipe"
version = "0.1.3"
description = "Pipeline reduction tools for B4R/LMT data"
authors = [
    "Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>",
    "Yuki Yoshimura <astro.yoshimura@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
astropy = "^6.0"
matplotlib = "^3.8"
netcdf4 = "^1.6"
numpy = "^1.26"
python-casacore = "^3.5"
scipy = "^1.13"
tqdm = "^4.66"
scikit-learn = "^1.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
ipython = "^8.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
