[tool.poetry]
name = "b4r"
version = "0.1.3"
description = "Reduction and analysis tools for LMT/B4R"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
astropy = "^6.0"
matplotlib = "^3.8"
netcdf4 = "^1.6"
numpy = "^1.26"
python-casacore = "^3.5"
scipy = "^1.13"
tqdm = "^4.66"
scikit-learn = "^1.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
ipython = "^8.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
